# erp_rules

./: .gitignore  CHANGELOG.md  README.md  license.txt  pyproject.toml
erp_rules/: engine.py  hooks.py  modules.txt
erp_rules/fixtures/: custom_field.json
erp_rules/handlers/: purchase_invoice.py  sales_invoice.py
erp_rules/rules/: base.py  cost_center_rule.py  due_date_rule.py  line_item_sync_rule.py
erp_rules/tests/: test_cost_center_rule.py  test_due_date_rule.py  test_engine.py  test_line_item_sync_rule.py
